# RP2040-HAT-AZURE-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _1_APP_TELEMETRY_manual.md  _2_APP_C2D_manual.md  _3_APP_CLIENT_X509_manual.md  _4_APP_PROV_X509_manual.md  rp2040_hat_azure_c-patch.cmake  rp2040_hat_azure_c_sdk_version.cmake
examples/: CMakeLists.txt  azure_samples.h  custom_hsm_x509.c  iothub_ll_c2d_sample.c  iothub_ll_client_x509_sample.c  iothub_ll_telemetry_sample.c  main.c  prov_dev_client_ll_sample.c  sample_certs.c
examples/custom_hsm_example/: custom_hsm_x509.c
examples/iothub_ll_c2d_sample/: iothub_ll_c2d_sample.c
examples/iothub_ll_client_x509_sample/: iothub_ll_client_x509_sample.c
examples/iothub_ll_telemetry_sample/: iothub_ll_telemetry_sample.c
examples/pnp/common/: pnp_dps_ll.c
examples/pnp/pnp_simple_thermostat/: pnp_simple_thermostat.c
examples/prov_dev_client_ll_sample/: prov_dev_client_ll_sample.c
libraries/: CMakeLists.txt
patches/: 02_iolibrary_driver_sntp.patch
port/: CMakeLists.txt  port_common.h
port/azure-iot-sdk-c/inc/: netif.h  netutil.h  tlsio_pal.h
port/azure-iot-sdk-c/inc/arpa/: inet.h
port/azure-iot-sdk-c/inc/netinet/: in.h
port/azure-iot-sdk-c/inc/sys/: socket.h
port/azure-iot-sdk-c/src/: agenttime.c  netif.c  netutil.c  platform.c  tcpsocketconnection_c.c  threadapi_nonos.c  tickcounter_nonos.c  tlsio_mbedtls.c
port/ioLibrary_Driver/src/: w5x00_spi.c
port/mbedtls/inc/: ssl_config.h
